fixed wrapping issue on people section and slowed down dvd ani

--- a/src/components/flexible/PeopleInfo/people-info.module.scss
+++ b/src/components/flexible/PeopleInfo/people-info.module.scss
@@ -74,21 +74,31 @@
             align-items: center;
             justify-content: center;
             ul{
-                flex-direction: column;
+                max-width: 100%;
+                display: block;
                 margin-left: -2rem;
+                white-space: normal;
             }
             li{
+                max-width: 100%;
                 margin: 0;
             }
             :global{
                 button{
+                    max-width: 100%;
                     padding: .25rem 0;
-                    font-size: 2.5rem;
                     position: relative;
                     padding-left: 2rem;
+                    padding-right: 2rem;
                     opacity: 1;
                     font-weight: 300;
+                    // display: block;
+                    text-align: left;
                     // padding-left: 0;
+                    font-size: 2rem;
+                    @media (min-width:1200px){
+                        font-size: 2.5rem;
+                    }
                     svg{
                         width: 1rem;
                         position: absolute;
